test_regress/t/t_tagged_matches_notunion_bad.out
%Error: t/t_tagged_matches_notunion_bad.v:23:11: Matches expression must be a tagged union type
   23 |     if (x matches tagged Valid .val) begin
      |           ^~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
